# userSystem/docs/swagger.yaml
@@ -73,6 +73,31 @@ paths:
       summary: 测试tmpl模板文件
       tags:
       - 测试
+  /api/v1/user/find:
+    post:
+      parameters:
+      - description: 用户名
+        in: query
+        name: username
+        type: string
+      - description: 邮箱
+        in: query
+        name: email
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: 登录时，当用户输入用户名或邮箱后，就调用该接口判断当前手机号是否注册
+      tags:
+      - 用户
   /api/v1/user/registered:
     post:
       parameters:
@@ -116,7 +141,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/app.Response'
-      summary: 发送验证码
+      summary: 用户注册前和忘记密码的时候请求发送验证码
       tags:
       - 用户
 swagger: "2.0"
